<resources>
    <string name="app_name">BlackjackMVVM</string>
    <string name="action_settings">Settings</string>
    <string name="dealer_hand_title">Dealer Hand</string>
    <string name="player_hand_title">Player Hand</string>
    <string name="player_cards_text">player cards</string>
    <string name="dealer_cards_text">dealer cards</string>
    <string name="button_hit_text">HIT</string>
    <string name="button_stay_text">STAY</string>
    <string name="button_new_round_text">NEW ROUND</string>
    <string name="winner_display_text">NO WINNER</string>
    <string name="user_money_text">Money: $0</string>
    <string name="winner_reason_display_text">No reason</string>
    <string name="turn_off_deposit">Turn off daily deposit</string>
    <string name="turn_on_deposit">Turn on daily deposit</string>
    <string name="store">Store</string>
</resources>
